metrics-api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-api
  labels:
    app: metrics-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: metrics-api
